# OctoPrint-YouTubeLive

./: .gitignore  MANIFEST.in  README.md  Taskfile.yml  docker_instructions.md  pyproject.toml  setup.py
octoprint_stlviewer/: __init__.py
octoprint_stlviewer/static/css/: stlviewer.css
octoprint_stlviewer/static/js/: jsc3d.js  stlviewer.js
octoprint_stlviewer/static/less/: stlviewer.less
octoprint_stlviewer/templates/: stlviewer_settings.jinja2  stlviewer_tab.jinja2
octoprint_youtubelive/: __init__.py
octoprint_youtubelive/static/css/: youtubelive.css
octoprint_youtubelive/static/js/: youtubelive.js
octoprint_youtubelive/templates/: youtubelive_settings.jinja2  youtubelive_tab.jinja2
